--- a/CardMinder/Base.lproj/Main.storyboard
+++ b/CardMinder/Base.lproj/Main.storyboard
@@ -254,7 +254,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="6VS-LV-Igm">
-                                <rect key="frame" x="190" y="264" width="81" height="40"/>
+                                <rect key="frame" x="219" y="66" width="81" height="40"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="More Icons">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -270,27 +270,30 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Icon" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="9mU-Ls-zl3">
-                                <rect key="frame" x="20" y="161" width="75" height="21"/>
+                                <rect key="frame" x="20" y="153" width="75" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Use photo" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="mIe-ha-ZvV">
-                                <rect key="frame" x="20" y="312" width="80" height="21"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Card Type:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="mIe-ha-ZvV">
+                                <rect key="frame" x="18" y="329" width="83" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="sIL-EN-QTk">
-                                <rect key="frame" x="87" y="462" width="140" height="30"/>
+                                <rect key="frame" x="87" y="518" width="140" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.1467236556" green="0.73677394699999998" blue="0.15355379159999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Save">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="saveNewCard:" destination="QJ2-PA-TKV" eventType="touchUpInside" id="mLI-ym-Np5"/>
+                                </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="sLX-UV-bAY">
-                                <rect key="frame" x="63" y="341" width="189" height="113"/>
+                                <rect key="frame" x="63" y="208" width="189" height="113"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="ZEb-5v-4QW">
@@ -303,15 +306,29 @@
                                 </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="JUh-D3-YtD">
-                                <rect key="frame" x="63" y="224" width="77" height="30"/>
+                                <rect key="frame" x="93" y="176" width="134" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Select Icon">
+                                <state key="normal" title="Take/Choose photo">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="showActionSheet:" destination="QJ2-PA-TKV" eventType="touchUpInside" id="G1h-QO-ZBh"/>
                                 </connections>
                             </button>
+                            <pickerView contentMode="scaleToFill" id="yl4-j7-gnX">
+                                <rect key="frame" x="0.0" y="348" width="320" height="162"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="QJ2-PA-TKV" id="MuN-CA-6V1"/>
+                                    <outlet property="delegate" destination="QJ2-PA-TKV" id="HWY-p5-wSq"/>
+                                </connections>
+                            </pickerView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="None" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="D57-oB-6s6">
+                                <rect key="frame" x="116" y="329" width="124" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -323,9 +340,11 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="cardTypePicker" destination="yl4-j7-gnX" id="ISn-RB-QeT"/>
                         <outlet property="iconView" destination="sLX-UV-bAY" id="1Zz-Bn-9ce"/>
                         <outlet property="nameField" destination="ZEb-5v-4QW" id="e0V-5C-hFn"/>
                         <outlet property="selectIcon" destination="JUh-D3-YtD" id="kd3-a2-77M"/>
+                        <outlet property="type" destination="D57-oB-6s6" id="SVW-fg-80G"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eIh-FI-VMd" userLabel="First Responder" sceneMemberID="firstResponder"/>
